--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -90,7 +90,11 @@
                 </div>
             </section>
         </main>
-        <footer>Footer</footer>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
 
