--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -42,7 +42,7 @@
                 <div>
                     <header>
                         <h2>Works</h2>
-                        <p>Take a look in our portfolio</p<h2>Works</h2>
+                        <p>Take a look in our portfolio</p>
                     </header>
                     <div>
                         <article>
