--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -18,7 +18,7 @@
             </div>
         </header>
         <br>
-        <!-- main -->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
             <br>
@@ -141,7 +141,7 @@
             </section>
         </main>
         <br>
-        <!-- footer -->
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
