--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -36,7 +36,7 @@
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
-                    <a href="#Get started"></a>
+                    <a href="#">Get started</a>
                 </div>
             </section>
             <br>
