--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -43,9 +43,9 @@
                             <li>Sagittis adipiscing lorem eleifend.</li>
                             <li>Felis enim feugiat dolore viverra.</li>
                         </ul>
-                    <h3>ordered</h3>
+                    <h3>Ordered</h3>
                         <ol>
-                            <li>Dolor pulvinar etiam magna etiam.</li>
+                            <li>olor pulvinar etiam magna etiam.</li>
                             <li>Sagittis adipiscing lorem eleifend.</li>
                             <li>Felis enim feugiat dolore viverra.</li>
                         </ol>
