--- a/responsive_design/07-index.html
+++ b/responsive_design/07-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='03-styles.css'>
+    <link rel='stylesheet' href='07-styles.css'>
   </head>
   <body>
     <!– Header –>
@@ -19,6 +19,10 @@
             <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
           </a>
         </div>
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+            <span class="navicon"></span>
+        </label>
         <nav class="navbar-menu">
           <ul class="nav">
             <li class="nav-item">
@@ -179,8 +183,8 @@
               <div class="col-1-2">
                 <img
                   sizes="(max-width: 858px) 40vw, 380px"
-                  srcset="images/pic-about-01_owdtrs,w_380.jpg"
-                  src="images/pic-about-01_owdtrs,w_380.jpg"
+                  srcset="images/pic-about-01_owdtrs_c_scale,w_380.jpg"
+                  src="images/pic-about-01_owdtrs_c_scale,w_380.jpg"
                   alt=""
                 >
               </div>
@@ -213,10 +217,10 @@
                     <img
                       sizes="(max-width: 3000px) 40vw, 1200px"
                       srcset="
-                      images/pic-article-01_dnbpyt/pic-article-01_dnbpyt_c_scale,w_380,
-                      images//pic-article-01_dnbpyt/pic-article-01_dnbpyt_c_scale,w_1028,
-                      images/pic-article-01_dnbpyt/pic-article-01_dnbpyt_c_scale,w_1200"
-                      src="pic-article-01_dnbpyt/pic-article-01_dnbpyt_c_scale,w_1200"
+                      images/pic-article-01_kw7nbw_c_scale/pic-article-01_dnbpyt_c_scale,w_380,
+                      images//pic-article-01_dnbpyt_c_scale/pic-article-01_dnbpyt_c_scale,w_1028,
+                      images/pic-article-01_kw7nbw_c_scale/pic-article-01_dnbpyt_c_scale,w_1200"
+                      src="pic-article-01_kw7nbw_c_scale/pic-article-01_dnbpyt_c_scale,w_1200"
                       alt=""
                     >
                   </div>
@@ -232,10 +236,10 @@
                     <img
                       sizes="(max-width: 3000px) 40vw, 1200px"
                       srcset="
-                      images/pic-article-02_bywlby/pic-article-02_bywlby_c_scale,w_380,
-                      images/pic-article-02_bywlby/pic-article-02_bywlby_c_scale,w_847,
-                      images/pic-article-02_bywlby/pic-article-02_bywlby_c_scale,w_1200"
-                      src="images/pic-article-02_bywlby/pic-article-02_bywlby_c_scale,w_1200"
+                      images/pic-article-02_bywlby_c_scale/pic-article-02_bywlby_c_scale,w_380,
+                      images/pic-article-02_bywlby_c_scale/pic-article-02_bywlby_c_scale,w_847,
+                      images/pic-article-02_bywlby_c_scale/pic-article-02_bywlby_c_scale,w_1200"
+                      src="images/pic-article-02_bywlby_c_scale/pic-article-02_bywlby_c_scale,w_1200"
                       alt=""
                     >
                   </div>
@@ -251,10 +255,10 @@
                     <img
                       sizes="(max-width: 3000px) 40vw, 1200px"
                       srcset="
-                      images/pic-article-03_hoswjg/pic-article-03_hoswjg_c_scale,w_380,
-                      images/pic-article-03_hoswjg/pic-article-03_hoswjg_c_scale,w_879,
-                      images/pic-article-03_hoswjg/pic-article-03_hoswjg_c_scale,w_1200"
-                      src="images/pic-article-03_hoswjg/pic-article-03_hoswjg_c_scale,w_1200""
+                      images/pic-article-03_hoswjg_c_scale/pic-article-03_hoswjg_c_scale,w_380,
+                      images/pic-article-03_hoswjg_c_scale/pic-article-03_hoswjg_c_scale,w_879,
+                      images/pic-article-03_hoswjg_c_scale/pic-article-03_hoswjg_c_scale,w_1200"
+                      src="images/pic-article-03_hoswjg_c_scale/pic-article-03_hoswjg_c_scale,w_1200""
                       alt=""
                     >
                   </div>
