--- a/accessibility/skip-links/01-index.html
+++ b/accessibility/skip-links/01-index.html
@@ -8,9 +8,20 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="00-styles.css">
+    <link rel="stylesheet" href="01-styles.css">
   </head>
   <body>
+    <!-- Skip links -->
+    <nav aria-label="Skip links">
+        <ul class="off-screen">
+            <li>
+                <a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a>
+            </li>
+            <li>
+                <a href="#a11y-main-content" class="skip-link">Skip to main content</a>
+            </li>
+        </ul>
+    </nav>
     <!– Header –>
     <header class="header" data-section-theme="dark">
       <div class="container">
@@ -24,7 +35,7 @@
           <label class="menu-icon" for="menu-btn">
             <span class="navicon"></span>
           </label>
-          <nav class="navbar-menu">
+          <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1">
             <ul class="nav">
               <li class="nav-item">
                 <a href="/" class="nav-link">Home</a>
@@ -66,7 +77,7 @@
       </div>
     </header>
     <!– Main –>
-    <main>
+    <main id="a11y-main-content" tabindex="-1">
       <h1 class="visually-hidden">Homepage</h1>
       <!– Hero section –>
       <section class="section-hero hero-homepage" data-section-theme="dark">
@@ -398,19 +409,4 @@
       </div>
     </footer>
   </body>
-  <!-- Skip links -->
-  <nav aria-label="Skip links">
-    <ul class="off-screen">
-        <li>
-            <a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a>
-        </li>
-        <li>
-            <a href="#a11y-main-content" class="skip-link">Skip to main content</a>
-        </li>
-    </ul>
-  </nav>
-  <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1">
-
-  </nav>
-  <main id="a11y-main-content" tabindex="-1"></main>
 </html>
