--- a/accessibility/fix-a11y/02-index.html
+++ b/accessibility/fix-a11y/02-index.html
@@ -3,12 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Homepage - A fake website</title>
     <style>
-      body {
-        color: #a6a5a5;
-        background-color: #5f7a8a;
-      }
+      
     </style>
   </head>
   <body>
